--- a/less/variables.less
+++ b/less/variables.less
@@ -2,12 +2,14 @@
 
 // Gray and Brand Colors for use across theme
 
-@theme-primary:    #fed136;
-@theme-danger:     #e74c3c;
+@light-blue: #6991B7
+@dark-blue: #34618A
+@red: #D44B51
+@white: #F5F5F5
+@black: #444444
 
-@gray-base:        #000;
-@gray-darker:      lighten(@gray-base, 13.5%); // #222
-@gray-dark:        lighten(@gray-base, 20%);   // #333
-@gray:             lighten(@gray-base, 33.5%); // #555
-@gray-light:       lighten(@gray-base, 46.7%); // #777
-@gray-lighter:     lighten(@gray-base, 93.5%); // #eee
+@black-darker:      lighten(@black, 13.5%);
+@black-dark:        lighten(@black, 20%);   
+@black:             lighten(@black, 33.5%); 
+@black-light:       lighten(@black, 46.7%); 
+@black-lighter:     lighten(@black, 93.5%); 
